estilo botao inline

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
   <main id="main-content">
     <div class="lesson" *ngIf="lesson === 0">
       <h1 class="title">Do-jo CSS Grid Layout - AmbevTech</h1>
-      <button class="btn" (click)="init()">Let's code!</button>
+      <button class="btn btn-inline-block" (click)="init()">Let's code!</button>
     </div>
 
     <div class="lesson" *ngIf="lesson === 1">
