--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -91,7 +91,7 @@ body {
 #controls {
     display: grid;
     gap: 1rem;
-    grid-template: "btnPrev btnNext";
+    grid-template-columns: 1fr 100px 1fr;
     background-color: $black;
     position: absolute;
     bottom: 0;
@@ -143,6 +143,13 @@ body {
         background: #bdc3c7;
         cursor: not-allowed;
     }
+}
+
+.input {
+    border: none;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 2rem;
 }
 
 .grid-item {
@@ -279,6 +286,8 @@ body {
 }
 
 .gt-gta {
+    // "logo menu menu" 50px -> Altura da linha
+    // / 100px 1fr 150px -> Largura das colunas
     grid-template:
         "logo menu menu" 50px
         "sidenav content posts" 1fr
@@ -313,11 +322,15 @@ body {
 
 .gac {
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-columns: 100px;
+    grid-auto-columns: 60px;
 }
 
 .gac .gr3 {
     grid-column: 3;
+}
+
+.gac .gr4 {
+    grid-column: 4;
 }
 
 .gac2 {
@@ -359,14 +372,19 @@ body {
 .gafd {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-flow: dense;
+    // Testar removendo o dense
 }
 
 .gafd .gc-span {
+    // Colocar 4
     grid-column: span 3;
 }
 
 #grid {
+    // Colocar grid-auto-rows
     grid: 50px 50px / 1fr 200px;
+
+    // Faz o mesmo que o código abaixo
     /* grid-template-rows: 50px 50px;
     grid-template-columns: 1fr 200px; */
 }
@@ -424,37 +442,37 @@ body {
 }
 
 .acs {
-    height: 150px;
+    height: 250px;
     grid-template-columns: 1fr 1fr;
     align-content: start;
 }
 
 .acc {
-    height: 150px;
+    height: 250px;
     grid-template-columns: 1fr 1fr;
     align-content: center;
 }
 
 .ace {
-    height: 150px;
+    height: 250px;
     grid-template-columns: 1fr 1fr;
     align-content: end;
 }
 
 .acsb {
-    height: 150px;
+    height: 250px;
     grid-template-columns: 1fr 1fr;
     align-content: space-between;
 }
 
 .acsa {
-    height: 150px;
+    height: 250px;
     grid-template-columns: 1fr 1fr;
     align-content: space-around;
 }
 
 .acse {
-    height: 150px;
+    height: 250px;
     grid-template-columns: 1fr 1fr;
     align-content: space-evenly;
 }
@@ -560,30 +578,6 @@ body {
     grid-column: col1-inicio / col1-fim;
 }
 
-.gcgta {
-    grid-template-columns: 100px auto auto 150px;
-    grid-template-rows: 1fr 100px;
-    grid-template-areas:
-        "logo menu menu menu"
-        "sidenav content content content"
-        "footer footer footer partners";
-}
-
-.gcgta .menu {
-    grid-column: 2 / 5;
-}
-
-.gcgta .content {
-    grid-column: content / -1;
-}
-
-.gcgta .footer {
-    grid-column: footer / 4;
-}
-
-.gcgta .partners {
-    grid-column: 4 / partners;
-}
 
 .gr {
     grid-template-columns: repeat(3, 1fr);
@@ -685,24 +679,16 @@ body {
 
 .ga .item1 {
     grid-area: 1 / 2 / 4 / 3;
+    // grid-row-start: 1;
+    // grid-column-start: 2;
+    // grid-row-end: 4;
+    // grid-column-end: 3;
 }
 
 .ga .item2 {
     grid-area: 1 / 3 / 3 / 5;
 }
 
-.gas {
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 50px;
-}
-
-.gas .item1 {
-    grid-area: span 2 / 3 / 3 / 5;
-}
-
-.gas .item5 {
-    grid-area: span 2 / 2 / 3 / 2;
-}
 
 .grid.jc {
     grid-template-columns: repeat(3, 1fr);
