--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,3 +35,73 @@ body {
   padding: 0;
   margin: 0;
 }
+
+/**
+ * Grid
+ */
+.grid {
+  display: grid;
+  gap: 0.5rem;
+}
+
+.grid-item {
+  color: $clouds;
+  padding: 0.5rem;
+  background-color: $red;
+  border-radius: 4px;
+}
+
+/**
+ * General content
+ */
+#main-content {
+  text-align: center;
+  background-color: transparent;
+}
+
+.card {
+  background-color: $clouds;
+  padding: 1rem;
+  max-width: 600px;
+  margin: 0 auto;
+  border-radius: 4px;
+  animation: slideTop 0.75s;
+
+  &.full-page {
+    max-width: 100%;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 4rem;
+    z-index: 2;
+    border-radius: 0;
+  }
+}
+
+.lesson {
+  padding: 1.5rem;
+  background-color: $black;
+  position: absolute;
+  min-height: 100vh;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
+/**
+ * Titles
+ */
+
+.title {
+  color: $yellow;
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+
+.subtitle {
+  color: $yellow;
+  font-size: 1.5rem;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  animation: slideTop 0.75s;
+}
