--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,28 @@ body {
   width: 100%;
   left: 0;
   top: 0;
+
+  &-lg {
+    display: flex;
+    align-items: center;
+
+    .card {
+      width: 100%;
+      max-width: 100%;
+      padding: 6rem 2rem;
+    }
+
+    .title {
+      font-size: 7rem;
+      color: $yellow;
+      text-shadow: 5px 5px 1px $red;
+      font-weight: bold;
+    }
+    .subtitle {
+      font-size: 3rem;
+      color: $black;
+    }
+  }
 }
 
 /**
@@ -96,6 +118,10 @@ body {
   color: $yellow;
   margin-top: 0;
   margin-bottom: 2rem;
+
+  &-lg {
+    font-size: 3rem;
+  }
 }
 
 .subtitle {
