preparacao pagina testing

--- a/src/app/testing/testing.component.html
+++ b/src/app/testing/testing.component.html
@@ -1,1 +1,7 @@
-<p>testing works!</p>
+<main id="main-content">
+  <h1 class="title title-lg">CSS Grid Layout</h1>
+  
+  <!-- <section class="card grid">
+    <div class="grid-item">Seção 1</div>
+  </section> -->
+</main>
