--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,6 +57,8 @@ body {
 #main-content {
   text-align: center;
   background-color: transparent;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .card {
