--- a/src/app/pratice/style.css
+++ b/src/app/pratice/style.css
@@ -56,6 +56,7 @@ select {
   background-color: rgba(255, 255, 255, 0.8);
   border: var(--borderSizeDefault) solid transparent;
   transition: 0.2s ease-in-out all;
+  text-transform: uppercase;
 }
 
 select option {
