--- a/src/app/pratice/style.css
+++ b/src/app/pratice/style.css
@@ -49,7 +49,8 @@ body {
 }
 
 input,
-select {
+select,
+textarea {
   padding: 1rem;
   border-radius: var(--borderRadius);
   border-color: transparent;
@@ -64,7 +65,8 @@ select option {
 }
 
 input:hover,
-select:hover {
+select:hover,
+textarea:hover {
   border-color: var(--gray);
 }
 
